Fix overflow for code blocks

--- a/docs/static/custom.css
+++ b/docs/static/custom.css
@@ -168,3 +168,7 @@
         min-width: 120px;
     }
 }
+
+pre code {
+    overflow-x:auto;
+}
